# superbird-mpris

./: .gitignore  README.md  dune  dune-project  flake.nix  superbird_mpris.opam
client/: dune  index.html  package.json  tsconfig.app.json
client/src/: App.tsx  ConnectingScreen.module.css  ConnectingScreen.tsx  index.css  variables.css
client/src/connection/: Socket.ts  connection.ts  mpris_pb.ts
client_bridge/: dune  main.ml  serial_port.ml  ws_server.ml
daemon/: dune  main.ml  protocol.ml  serial.ml  serial_port.ml  server_impl.ml  transport.ml
lib/: dune  generate.sh  mpris_pb.ml  mpris_pb.mli  mpris_pb.proto  pb.ml  protocol.ml  serial.ml  transport.ml
libudev/: README  dune  udev.ml  udev.mli
nix/: default.nix
superbird/: ocamlrun-5.2.0
test/: dune  test_mpris.ml
